2008-11-10  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	* daemon/libsmb-compat.h:
	Timestamp (mtime) setting support

2008-11-06  Hans Petter Jansson  <hpj@novell.com>

	* gconf/gapplookupgconf.c (get_default_for_uri_scheme): Free command
	string after use. Fixes a leak.

2008-11-04  Tomas Bzatek  <tbzatek@redhat.com>

	* client/gdaemonmount.c: (g_daemon_mount_guess_content_type_sync):
	Return an empty array on success when no content type matches

2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_iter_process):
	Convert stuct tm from what ParseFTPList gives to what mktime expects.
	Fixes wrong date/time parsing for FTP files.
	Patch by Andreas Henriksson (#550837). 

2008-10-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_init_data):
	Use LIST -a instead of LIST on UNIX ftp sites.
	Patch by Andreas Henriksson (#551822).

2008-10-24  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	Don't ask for credentials twice when the password dialog was cancelled

2008-10-24  Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-info.c (show_attributes):
	Don't show fallback setting for GThemedIcon (this is a construct only property).
	List icons on same line.

2008-10-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsdaemonutils.c:
	Don't return fallback icons, since that gives problems
	with custom mime icons (#528320)

2008-10-21  Alexander Larsson  <alexl@redhat.com>

	Patch from David Zeuthen (#557182)
	
        * common/Makefile.am:
        * common/gvfsicon.[ch]:
	Added GVfsIcon object for GVfs backend specific icons.
	
        * common/gmountspec.[ch]:
	Make sure to/from string works correctly to roundtrip GMountSpec:s
	Make GMountSpec a boxed type
	
        * common/gvfsdaemonprotocol.h:
	Add OpenIconForRead operation
	
        * client/Makefile.am: